--- a/ToDoDatabase/Base.lproj/Main.storyboard
+++ b/ToDoDatabase/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="JdV-hA-evq">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
@@ -8,10 +8,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Folder View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="ToDoDatabase" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="FolderViewController" id="BYZ-38-t0r" customClass="FolderViewController" customModule="ToDoDatabase" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -36,23 +36,22 @@
                     <navigationItem key="navigationItem" id="4Z1-Q9-Lcs"/>
                     <connections>
                         <outlet property="tableview" destination="r5B-VN-ok4" id="hQa-kv-ayR"/>
-                        <segue destination="WN4-nc-H1b" kind="show" identifier="showTaskList" id="nkA-c8-W8d"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="926.08695652173924" y="88.392857142857139"/>
+            <point key="canvasLocation" x="2746.376811594203" y="88.392857142857139"/>
         </scene>
         <!--Task List View Controller-->
         <scene sceneID="6FN-Di-yvH">
             <objects>
-                <viewController id="WN4-nc-H1b" customClass="TaskListViewController" customModule="ToDoDatabase" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="TaskListViewController" id="WN4-nc-H1b" customClass="TaskListViewController" customModule="ToDoDatabase" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="nRQ-56-6jQ">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="insetGrouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="Cp0-2G-IdD">
-                                <rect key="frame" x="0.0" y="88" width="414" height="808"/>
+                                <rect key="frame" x="0.0" y="44" width="414" height="852"/>
                             </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="BSy-E5-1fo"/>
@@ -71,7 +70,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mkw-XP-dGs" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1831.8840579710147" y="87.723214285714278"/>
+            <point key="canvasLocation" x="3652.1739130434785" y="87.723214285714278"/>
         </scene>
         <!--Alert View Controller-->
         <scene sceneID="QsK-Xh-9kb">
@@ -173,25 +172,25 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yTr-kY-7Tz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2605.7971014492755" y="87.723214285714278"/>
+            <point key="canvasLocation" x="4426.0869565217399" y="87.723214285714278"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="jfO-TH-S8D">
+        <scene sceneID="6ek-6R-x3J">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="JdV-hA-evq" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="McJ-hV-D0d" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="RR8-xB-hF2">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="mHx-v5-lvx">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="dBW-k9-M94"/>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="lfm-jq-Pau"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="fo7-TD-r9t" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lco-Nq-d0g" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="15.942028985507248" y="88.392857142857139"/>
+            <point key="canvasLocation" x="1836.2318840579712" y="88.392857142857139"/>
         </scene>
     </scenes>
     <resources>
